[package]
name = "pest"
description = "Elegant, efficient grammars"
version = "0.3.3"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/dragostis/pest"
documentation = "http://dragostis.github.io/pest/pest/"
keywords = ["pest", "parser", "peg", "grammar"]
license = "MPL-2.0"
