[package]
name = "pest_bootstrap"
description = "pest bootstrap script"
version = "0.0.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest-parser.github.io/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
publish = false
license = "MIT/Apache-2.0"

[dependencies]
pest_generator = "2.1" # Use the crates-io version, which (should be) known-good
proc-macro2 = "1.0"
quote = "1.0"
