[package]
name = "pest_debugger"
description = "pest grammar debugger"
version = "2.7.10"
edition = "2021"
authors = [
    "Dragoș Tiselice <dragostiselice@gmail.com>",
    "Tomas Tauber <me@tomtau.be>",
]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "grammar", "debugger"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "_README.md"
rust-version = "1.61"

[dependencies]
pest = { path = "../pest", version = "2.7.10" }
pest_meta = { path = "../meta", version = "2.7.10" }
pest_vm = { path = "../vm", version = "2.7.10" }
reqwest = { version = "= 0.11.13", default-features = false, features = [
    "blocking",
    "json",
    "default-tls",
] }
rustyline = "10"
serde_json = "1"
thiserror = "1"

[badges]
codecov = { repository = "pest-parser/pest" }
maintenance = { status = "actively-developed" }
github = { repository = "pest-parser/pest" }
