[package]
name = "pest_generator"
description = "pest code generator"
version = "2.2.1"
edition = "2018"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest-parser.github.io/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "generator"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"
rust-version = "1.56"

[features]
default = ["std"]
std = ["pest/std"]

[dependencies]
pest = { path = "../pest", version = "2.2.1", default-features = false }
pest_meta = { path = "../meta", version = "2.2.1" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
