[package]
name = "pest_generator"
description = "pest code generator"
version = "2.7.1"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "generator"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"
rust-version = "1.60"

[features]
default = ["std"]
std = ["pest/std"]
not-bootstrap-in-src = ["pest_meta/not-bootstrap-in-src"]
grammar-extras = ["pest_meta/grammar-extras"]

[dependencies]
pest = { path = "../pest", version = "2.7.1", default-features = false }
pest_meta = { path = "../meta", version = "2.7.1" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
