[package]
name = "pest_grammars"
description = "pest popular grammar implementations"
version = "2.1.0"
edition = "2018"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest-parser.github.io/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"
rust-version = "1.56"

[dependencies]
pest = { path = "../pest", version = "2.1.0" }
pest_derive = { path = "../derive", version = "2.1.0" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "json"
harness = false