[package]
name = "pest_meta"
description = "pest meta language parser and validator"
version = "2.7.1"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "meta", "optimizer"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"
exclude = ["src/grammar.pest"]
include = ["Cargo.toml", "src/**/*", "src/grammar.rs", "_README.md", "LICENSE-*"]
rust-version = "1.60"

[dependencies]
pest = { path = "../pest", version = "2.7.1" }
once_cell = "1.8.0"

[build-dependencies]
sha2 = { version = "0.10", default-features = false }
cargo = { version = "0.70", optional = true }

[features]
default = []
not-bootstrap-in-src = ["dep:cargo"]
grammar-extras = []