[package]
name = "pest_meta"
description = "pest meta language parser and validator"
version = "2.8.6"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "meta", "optimizer"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "_README.md"
exclude = ["src/grammar.pest"]
include = [
    "Cargo.toml",
    "src/**/*",
    "_README.md",
    "LICENSE-*",
]
rust-version = "1.83"

[dependencies]
pest = { path = "../pest", version = "2.8.6" }

[features]
default = []
not-bootstrap-in-src = [] # deprecated, exists for backwards compatibilty
grammar-extras = []
