[package]
name = "pest"
description = "The Elegant Parser"
version = "2.7.1"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"
rust-version = "1.60"

[features]
default = ["std"]
# Implements `std::error::Error` for the `Error` type
std = ["ucd-trie/std", "dep:thiserror"]
# Enables the `to_json` function for `Pair` and `Pairs`
pretty-print = ["dep:serde", "dep:serde_json"]
# Enable const fn constructor for `PrecClimber`
const_prec_climber = []

[dependencies]
ucd-trie = { version = "0.1.5", default-features = false }
serde = { version = "1.0.145", optional = true }
serde_json = { version = "1.0.85", optional = true}
thiserror = { version = "1.0.37", optional = true }
memchr = { version = "2", optional = true }
