[package]
name = "pest"
description = "The Elegant Parser"
version = "2.8.4"
edition = "2021"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
homepage = "https://pest.rs/"
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
readme = "_README.md"
rust-version = "1.83"

[features]
default = ["std", "memchr"]
# Implements `std::error::Error` for the `Error` type
std = ["ucd-trie/std"]
# Enables the `to_json` function for `Pair` and `Pairs`
pretty-print = ["dep:serde", "dep:serde_json"]
# Enable const fn constructor for `PrecClimber`
const_prec_climber = []
# Enable miette error
miette-error = ["std", "pretty-print", "dep:miette"]

[dependencies]
ucd-trie = { version = "0.1.5", default-features = false }
serde = { version = "1.0.145", optional = true }
serde_json = { version = "1.0.85", optional = true }
memchr = { version = "2", optional = true }
miette = { version = "7.2.0", optional = true, features = ["fancy"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
miette = { version = "7.2.0", features = ["fancy"] }

[[bench]]
name = "stack"
harness = false
