[package]
name = "pest_derive"
description = "pest's derive macro"
version = "0.4.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/dragostis/pest"
documentation = "http://dragostis.github.io/pest/pest/"
keywords = ["pest", "parser", "peg", "grammar"]
license = "MPL-2.0"

[lib]
name = "pest_derive"
proc-macro = true

[dependencies]
quote = "^0.3"
syn = "^0.10"