[package]
name = "pest_derive"
description = "pest's derive macro"
version = "1.0.0-beta.14"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "_README.md"

[lib]
name = "pest_derive"
proc-macro = true

[dependencies]
quote = "^0.3"
syn = "^0.10"
pest = { path = "../pest", version = "^1.0.0-beta" }

[badges]
travis-ci = { repository = "pest-parser/pest" }
