[package]
name = "pest_derive"
description = "pest's derive macro"
version = "1.0.1"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"

[lib]
name = "pest_derive"
proc-macro = true

[dependencies]
quote = "^0.3"
syn = "^0.10"
pest = { path = "../pest", version = "^1.0" }

[badges]
codecov = { repository = "pest-parser/pest" }
maintenance = { status = "actively-developed" }
travis-ci = { repository = "pest-parser/pest" }
