[package]
name = "pest_grammars"
description = "pest popular grammar implementations"
version = "1.0.0-beta.12"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MPL-2.0"
readme = "_README.md"

[dependencies]
pest = { path = "../pest", version = "^1.0.0-beta" }
pest_derive = { path = "../pest_derive", version = "^1.0.0-beta" }

[badges]
travis-ci = { repository = "pest-parser/pest" }
