[package]
name = "pest_meta"
description = "the grammar of pest's grammar definition language"
version = "0.1.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/pest-parser/pest"
documentation = "https://docs.rs/pest"
keywords = ["pest", "parser", "peg", "grammar"]
categories = ["parsing"]
license = "MIT/Apache-2.0"
readme = "_README.md"

[dependencies]
maplit = "^0.1.5"
pest_derive = "^1.0"
pest = "^1.0"

[dev-dependencies]
colored = "1.5"
