[package]
name = "pest-tool"
description = "pest grammar tool"
version = "0.1.0"
authors = ["Dragoș Tiselice <dragostiselice@gmail.com>"]
repository = "https://github.com/dragostis/pest"
keywords = ["pest", "parser", "tool", "grammar"]
license = "MPL-2.0"

[[bin]]
name = "pest"

[dependencies]
clap = "2.8.0"
pest = { git = "https://github.com/dragostis/pest", branch = "v0.4.0" }
